# media-viewer-tauri

./: AGENTS.md  CLAUDE.md  LICENSE.md  README.md  build-dmg.sh  bun.lockb  package.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-and-smoke-test.yaml  build-tauri-app.yaml  cli-test.yaml  coverage.yaml  publish-binaries.yaml  publish.yaml  release.yaml  tauri.yaml
docs/: IDEAS.md  persmissions.md
docs/logo/: app-logo copy.xcf
docs/tauri v2/: Ideas.md
scripts/: create-code-coverage-report-cli.sh  create-code-coverage-report-html.sh  create-code-coverage-report.sh  open-dmg.sh  sign-bundles.sh  update-macos-tauri-conf.sh
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/file-examples.com/: SOURCE.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/thumbnail/: cache.rs  mod.rs  service.rs
src/lib/components/: Filmstrip.svelte  FolderTree.svelte  MediaGrid.svelte  MediaViewer.svelte  SettingsModal.svelte  StatusBar.svelte
src/lib/stores/: settings.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte
src/routes/splashscreen/: +page@.svelte
